[package]
name = "wayland-kbd"
version = "0.8.0"
documentation = "https://vberger.github.io/wayland-kbd/wayland_kbd/"
repository = "https://github.com/vberger/wayland-kbd"
authors = ["Victor Berger <victor.berger@m4x.org>"]
license = "MIT"
description = "Keyboard mapping utility for wayland-client using libxkbcommon."
categories = ["gui"]

[badges]
travis-ci = { repository = "vberger/wayland-kbd" }

[dependencies]
bitflags = ">=0.5, <0.8"
lazy_static = "0.2"
memmap = "0.4"
wayland-client = "0.8.0"
dlib = "0.3"

[dev-dependencies]
wayland-client = { version = "0.8.0", features = ["dlopen"] }
byteorder = "1.0.0"
tempfile = "2.1"
