[package]
name = "wayland-kbd"
version = "0.9.1"
documentation = "https://smithay.github.io/wayland-kbd/wayland_kbd/"
repository = "https://github.com/smithay/wayland-kbd"
authors = ["Victor Berger <victor.berger@m4x.org>"]
license = "MIT"
description = "Keyboard mapping utility for wayland-client using libxkbcommon."
categories = ["gui"]

[badges]
travis-ci = { repository = "Smithay/wayland-kbd" }

[dependencies]
bitflags = ">=0.5, <0.8"
lazy_static = "0.2"
memmap = "0.4"
wayland-client = "0.9"
dlib = "0.3"

[dev-dependencies]
wayland-client = { version = "0.9", features = ["dlopen"] }
byteorder = "1.0.0"
tempfile = "2.1"
